--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  background: blue;
+  width: 100%;
+  height: 8vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+  align-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.text{
+  margin-left: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blackBox{
+  background: black;
+  width: 100%;
+  height: 80vh;
+   display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
+.whiteBox{
+  background: white;
+  width: 70%;
+  height: 70%;
+  padding: 30px;
+ 
+}
+
+.topText{
+  background: white;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+}
+
+.previousButton{
+  background: lightblue;
+}
+
+.nextButton{
+  background: lightblue;
+}
+
+.midText{
+  background: white;
+}
+
+.bottomText{
+  background: white;
+}
+
+.blackBoxBottom{
+  background: black;
+  height: 30px;
+  width: 70%;
+  display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
 }
